[package]
name = "bcrypt-rs"
version = "0.1.1"
edition = "2021"
description = "OIDC Client Library for Rust Apps"
license = "MIT OR Apache-2.0"
authors = ["Saltuk Alakus <saltukalakus@gmail.com>"]
readme = "README.md"
repository = "https://github.com/saltukalakus/bcrypt"
keywords = ["bcrypt", "password", "web", "hash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
bcrypt = "0.10.1"

[[bench]]
name = "bcrypt_benchmark"
path = "benches/bcrypt-benchmark.rs"
harness = false